--- a/Portal_del_Vecino/public_html/modulos/foro/foro.html
+++ b/Portal_del_Vecino/public_html/modulos/foro/foro.html
@@ -66,17 +66,17 @@
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>                        
 	      </button>
-	      <a class="navbar-brand" href="../../home.html">Inicio</a>
+	      <a class="navbar-brand" href="../../home.php">Inicio</a>
 	    </div>
 	    <div class="collapse navbar-collapse" id="myNavbar">
 	      <ul class="nav navbar-nav">
 	        <li class="dropdown">
 	          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Tesorería <span class="caret"></span></a>
 	          <ul class="dropdown-menu">
-	            <li><a href="../tesoreria/tesoreria_balances.html">Ver Balances</a></li>
-	            <li><a href="../tesoreria/tesoreria_recursos.html">Solicitar Recursos</a></li>
-	            <li><a href="../tesoreria/tesoreria_add_balances.html">Añadir balances (*)</a></li>
-	            <li><a href="../tesoreria/tesoreria_admin_recursos.html">Administrar Recursos (*)</a></li>
+	            <li><a href="../tesoreria/tesoreria_balances.php">Ver Balances</a></li>
+	            <li><a href="../tesoreria/tesoreria_recursos.php">Solicitar Recursos</a></li>
+	            <li><a href="../tesoreria/tesoreria_add_balances.php">Añadir balances (*)</a></li>
+	            <li><a href="../tesoreria/tesoreria_admin_recursos.php">Administrar Recursos (*)</a></li>
 	          </ul>
 	        </li>
 	        <li class="dropdown">
